--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "origammi/webcms-bundle": ">=4.1.9,<5.0",
+        "origammi/webcms-bundle": "~5.0",
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.4"
     },
