--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -26,8 +26,8 @@ services:
     astina_form.form:
         class: %astina_form.form.class%
         arguments:
-            - @astina_webcms.router
-            - @translator
+            - '@astina_webcms.router'
+            - '@translator'
             - %astina_form.form.recaptcha.site_key%
         tags:
             - { name: form.type, alias: webcms_form }
@@ -35,8 +35,8 @@ services:
     astina_form.form_config:
         class: %astina_form.form_config.class%
         arguments:
-            - @astina_form.repository.form_config_field
-            - @doctrine
+            - '@astina_form.repository.form_config_field'
+            - '@doctrine'
         tags:
             - { name: form.type, alias: webcms_form_config }
 
@@ -48,33 +48,33 @@ services:
     astina_form.form_tracker:
         class: %astina_form.form_tracker.class%
         arguments:
-            - @form.factory
-            - @astina_webcms.router
-            - @event_dispatcher
+            - '@form.factory'
+            - '@astina_webcms.router'
+            - '@event_dispatcher'
             - %astina_form.form_type%
             - %astina_form.form.recaptcha.secret_key%
 
     astina_form.notification_mailer:
         class: %astina_form.notification_mailer.class%
         arguments:
-            - @mailer
-            - @templating
+            - '@mailer'
+            - '@templating'
             - %astina_form.notification_mailer.template%
             - %astina_form.notification_mailer.from_address%
             
     astina_form.confirmation_mailer:
         class: %astina_form.confirmation_mailer.class%
         arguments:
-            - @mailer
+            - '@mailer'
             - %astina_form.confirmation_mailer.from_address%
-            - @logger
+            - '@logger'
 
     astina_form.event_listener.submit_listener:
         class: %astina_form.event_listener.submit_listener.class%
         arguments:
-            - @astina_form.form_tracker
-            - @astina_form.repository.form_config
-            - @astina_webcms.router
+            - '@astina_form.form_tracker'
+            - '@astina_form.repository.form_config'
+            - '@astina_webcms.router'
             - %astina_form.form_type%
         tags:
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
@@ -82,50 +82,47 @@ services:
     astina_form.event_listener.success_listener:
         class: %astina_form.event_listener.success_listener.class%
         arguments:
-            - @astina_form.repository.form_submission
-            - @astina_form.notification_mailer
-            - @astina_form.confirmation_mailer
+            - '@astina_form.repository.form_submission'
+            - '@astina_form.notification_mailer'
+            - '@astina_form.confirmation_mailer'
         tags:
             - { name: kernel.event_listener, event: astina_form.form_success, method: onSuccess }
             
     astina_form.submissions_exporter:
         class: %astina_form.submissions_exporter.class%
         arguments:
-            - @translator
+            - '@translator'
             - %astina_form.submissions_exporter.temp_dir%
 
     astina_form.repository.form_config:
-        class: Doctrine\ORM\EntityRepository
-        factory_service: doctrine
-        factory_method: getRepository
+        class: Astina\Bundle\FormBundle\Entity\FormConfig
+        factory: ['@doctrine.orm.default_entity_manager', getRepository]
         arguments:
             - AstinaFormBundle:FormConfig
 
     astina_form.repository.form_config_field:
-        class: Doctrine\ORM\EntityRepository
-        factory_service: doctrine
-        factory_method: getRepository
+        class: Astina\Bundle\FormBundle\Entity\FormConfigField
+        factory: ['@doctrine.orm.default_entity_manager', getRepository]
         arguments:
             - AstinaFormBundle:FormConfigField
 
     astina_form.repository.form_submission:
         class: Astina\Bundle\FormBundle\Entity\FormSubmissionRepository
-        factory_service: doctrine
-        factory_method: getRepository
+        factory: ['@doctrine.orm.default_entity_manager', getRepository]
         arguments:
             - AstinaFormBundle:FormSubmission
 
     astina_form.twig_extension:
         class: %astina_form.twig_extension.class%
         arguments:
-            - @astina_form.form_tracker
+            - '@astina_form.form_tracker'
         tags:
             - { name: twig.extension }
 
     astina_form.help_type_extension:
         class: Astina\Bundle\FormBundle\Form\Type\HelpTypeExtension
         tags:
-            - { name: form.type_extension, alias: form }
+            - { name: form.type_extension, alias: form, extended_type: Symfony\Component\Form\Extension\Core\Type\FormType }
 
     astina_form.type.static_title:
         class: Astina\Bundle\FormBundle\Form\Type\StaticTitleType
